<resources>
    <string name="app_name">Test</string>
    <string name="message_hint">Write your message</string>
    <string name="toast_button">Send to Toast</string>
    <string name="activity_button">Send to Activity</string>
    <string name="null_text">It is null</string>
    <string name="other_button">Send to other apps</string>
    <string name="recycler_button">Show Recycler</string>
    <string name="send_heading">Send</string>
    <string name="other_heading">Others</string>
    <string name="second_activity_title">Second Activity</string>
    <string name="recycler_activity_title">Recycler View</string>
    <string name="cv_title">Title</string>
</resources>
